@@ -23,6 +23,13 @@
 // Otherwise we'll end up with duplicated symbols
 #ifdef GEOS_INLINE
 
+// If using MingW with GEOS_INLINE to build a DLL then MingW's gcc
+// has already generated the stubs for the contents of this file. 
+// Hence we need to supress it to avoid "multiple definition" errors
+// during the final link phase
+#if defined(__MINGW32__) && !defined(DLL_EXPORT)
+
+
 // Undefine GEOS_INLINE so that .inl files
 // will be ready for an implementation file
 #undef GEOS_INLINE 
@@ -49,5 +56,8 @@
 #include <geos/noding/snapround/HotPixel.inl>
 #include <geos/noding/snapround/MCIndexSnapRounder.inl>
 #include <geos/noding/MCIndexNoder.inl>
+
+
+#endif // defined __MINGW32__ and !defined DLL_EXPORT
 
 #endif // defined GEOS_INLINE
