@@ -1,3 +1,8 @@
+2007-01-03 Mark Cave-Ayland <mark.cave-ayland@ilande.co.uk>
+
+	* source/inlines.cpp, source/algorithm/HCoordinate.cpp:
+	  Fixes for MingW builds. See geos-devel/2007-January/002766.html.
+
 2007-01-03 Sandro Santilli <strk@refractions.net>
 
 	* source/operation/buffer/BufferOp.cpp (bufferReducedPrecision):
